--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5027,6 +5027,10 @@ a img {
 }
 
 .user-projects {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     margin: auto
 }
 
