--- a/assets/css/tufte.css
+++ b/assets/css/tufte.css
@@ -50,7 +50,7 @@ body {
     margin-right: auto;
     padding-left: 12.5%;
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    background-color: #fffff8;
+    background-color: #0069C7;
     color: #111;
     max-width: 1400px;
     counter-reset: sidenote-counter;
